--- a/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib.csproj
+++ b/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{626F31C4-C77C-4440-A45E-0A55A77B9603}</ProjectGuid>
+    <ProjectGuid>{98F5A4B1-AFC0-4717-B1E1-9EF93A272322}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.KonyushevskyAA.Sprint4.Task0.V8.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.KonyushevskyAA.Sprint4.Task0.V8.Lib</AssemblyName>
+    <RootNamespace>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib</RootNamespace>
+    <AssemblyName>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -39,8 +39,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="tyuiu.cources.programming.interfaces">
       <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
