--- a/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.csproj
+++ b/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11/Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{626F31C4-C77C-4440-A45E-0A55A77B9603}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.KonyushevskyAA.Sprint4.Task0.V8.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.KonyushevskyAA.Sprint4.Task0.V8.Lib</AssemblyName>
+    <ProjectGuid>{F44A175B-9F24-4A2C-8402-1EB567B4A71F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11</RootNamespace>
+    <AssemblyName>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,14 +41,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataService.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib\Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib.csproj">
+      <Project>{98f5a4b1-afc0-4717-b1e1-9ef93a272322}</Project>
+      <Name>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
