--- a/Tyuiu.KonyushevskyAA.Sprint4.Task4.V22/Tyuiu.KonyushevskyAA.Sprint4.Task4.V22.csproj
+++ b/Tyuiu.KonyushevskyAA.Sprint4.Task4.V22/Tyuiu.KonyushevskyAA.Sprint4.Task4.V22.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98F5A4B1-AFC0-4717-B1E1-9EF93A272322}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.KonyushevskyAA.Sprint4.Task3.V11.Lib</AssemblyName>
+    <ProjectGuid>{CBF8492F-3BB3-4A2F-B521-49CD2B2A9E10}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Tyuiu.KonyushevskyAA.Sprint4.Task4.V22</RootNamespace>
+    <AssemblyName>Tyuiu.KonyushevskyAA.Sprint4.Task4.V22</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,14 +41,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataService.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.KonyushevskyAA.Sprint4.Task4.V22.Lib\Tyuiu.KonyushevskyAA.Sprint4.Task4.V22.Lib.csproj">
+      <Project>{ca6b6a66-577f-45c0-b38c-aab8bcfca352}</Project>
+      <Name>Tyuiu.KonyushevskyAA.Sprint4.Task4.V22.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
